bugfix/ie9 added copy wrap issue for gallery headlines

--- a/src/overrides/_ie-only.css
+++ b/src/overrides/_ie-only.css
@@ -6,6 +6,10 @@
 	}
 
 	/*for gallery copy*/
+	.title-in {
+		white-space: normal !important;
+	}
+
 	.desc-in {
 		white-space: normal !important;
 	}
